--- a/service.html
+++ b/service.html
@@ -64,7 +64,7 @@
 
                     <!-- Content -->
                     <div class="col-md-12">
-                        <h1 class="section-heading" data-aos="fade-up"> My Offerings </h1>
+                       
 
                         <div class="service-content-wrap" data-aos="zoom-in">
                             <div class="service-content-inner shadow-box">
@@ -117,10 +117,10 @@
                                <div class="about-profile-box info-box shadow-box h-full">
                                     <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                     <div class="inner-profile-icons shadow-box">
-                                        <a href="#">
+                                       <a href="https://purvi05s.github.io/portfolio.github.io/">
                                             <img src="assets/images/internet.png" alt="internet" style="width: 40px;height: 40px">
                                         </a>
-                                        <a href="#">
+                                        <a href="https://www.linkedin.com/in/purvi-shahane/">
                                             <img src="assets/images/linkedin.png" alt="internet" style="width: 40px;height: 40px">
                                         </a>
                                     </div>
