--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
                                 <div class="about-profile-box info-box shadow-box h-full">
                                     <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                     <div class="inner-profile-icons shadow-box">
-                                        <a href="https://purvi05s.github.io/portfolio.github.io/">
+                                        <a href="https://purvi05s.github.io/portfolio.github.io/" target="_blank">
                                             <img src="assets/images/internet.png" alt="internet" style="width: 40px;height: 40px">
                                         </a>
-                                        <a href="https://www.linkedin.com/in/purvi-shahane/">
+                                        <a href="https://www.linkedin.com/in/purvi-shahane/" target="_blank">
                                             <img src="assets/images/linkedin.png" alt="internet" style="width: 40px;height: 40px">
                                         </a>
                                     </div>
