--- a/service.html
+++ b/service.html
@@ -101,6 +101,12 @@
                                         <h3>Performance Optimization</h3>
                                         <p>I ensure that responsive websites are also optimized for performance, minimizing load times and keeping the user experience smooth across all devices.</p>
                                     </div>
+
+                                    <div class="service-item">
+                                        <img src="assets/images/react.png" alt="performance" style="width: 50px;height: 50px" >
+                                        <h3>React</h3>
+                                        <p>I'm continuing to build more projects to practice concepts like React Router, form handling, and basic state management with Context API.</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -117,10 +123,10 @@
                                <div class="about-profile-box info-box shadow-box h-full">
                                     <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                     <div class="inner-profile-icons shadow-box">
-                                       <a href="https://purvi05s.github.io/portfolio.github.io/">
+                                       <a href="https://purvi05s.github.io/portfolio.github.io/" target="_blank">
                                             <img src="assets/images/internet.png" alt="internet" style="width: 40px;height: 40px">
                                         </a>
-                                        <a href="https://www.linkedin.com/in/purvi-shahane/">
+                                        <a href="https://www.linkedin.com/in/purvi-shahane/" target="_blank">
                                             <img src="assets/images/linkedin.png" alt="internet" style="width: 40px;height: 40px">
                                         </a>
                                     </div>
