--- a/contact.html
+++ b/contact.html
@@ -100,8 +100,12 @@
 
                         <h3 data-aos="fade-up">Social Info</h3>
                         <ul class="social-links d-flex align-center" data-aos="zoom-in">
-                            <li><a class="shadow-box" href="#"><img src="assets/images/internet.png" alt="internet" style="width: 35px;height: 35px"></a></li>
-                            <li><a class="shadow-box" href="#"><img src="assets/images/linkedin.png" alt="internet" style="width: 35px;height: 35px"></a></li>
+                            <li><a href="https://purvi05s.github.io/portfolio.github.io/" target="_blank">
+                                            <img src="assets/images/internet.png" alt="internet" style="width: 35px;height: 35px">
+                                        </a></li>
+                            <li><a href="https://www.linkedin.com/in/purvi-shahane/" target="_blank">
+                                            <img src="assets/images/linkedin.png" alt="internet" style="width: 35px;height: 35px">
+                                        </a></li>
                            
                         </ul>
                         </div>
