--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
                                 </div>
                                 <div class="right">
                                     <span>MAIL Me</span>
-                                    <h4>purvishahane05@gmail.com</h4>
+                                    <h4><a href="mailto:purvishahane05@gmail.com" style="color:#ffffff">purvishahane05@gmail.com</a></h4>
                                     
                                 </div>
                             </li>
@@ -82,7 +82,7 @@
                                 </div>
                                 <div class="right">
                                     <span>Contact Me</span>
-                                    <h4>+44 755-356-9839</h4>
+                                    <h4><a href="tel:+44 755-356-9839" style="color:#ffffff">+44 755-356-9839</h4>
                                    
                                 </div>
                             </li>
