--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
                                 </div>
                                 <div class="right">
                                     <span>Contact Me</span>
-                                    <h4><a href="tel:+44 755-356-9839" style="color:#ffffff">+44 755-356-9839</h4>
+                                    <h4><a href="tel:+44 755-356-9839" style="color:#ffffff">+44 755-356-9839</a></h4>
                                    
                                 </div>
                             </li>
