--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
                                        <img src="assets/images/designer.png" alt="website Designer" style="width: 50px;height: 50px">
                                         <img src="assets/images/responsive-design.png" alt="responsive-design" style="width: 50px;height: 50px">
                                         <img src="assets/images/figma.png" alt="figma" style="width: 50px;height: 50px">
-                                        <img src="assets/images/CMS.png" alt="CMS" style="width: 50px;height: 50px" >
+                                         <img class="cms" src="assets/images/react.png" alt="react" style="width: 50px;height: 50px" >
+                                        <img class="cms" src="assets/images/CMS.png" alt="CMS" style="width: 50px;height: 50px" >
                                         <img class="performance" src="assets/images/performance.png" alt="performance" style="width: 50px;height: 50px">
                                     </div>
                                     <div class="d-flex align-items-center justify-content-between" >
