--- a/service.html
+++ b/service.html
@@ -103,9 +103,9 @@
                                     </div>
 
                                      <div class="service-item">
-                                        <img src="assets/images/performance.png" alt="performance" style="width: 50px;height: 50px" >
-                                        <h3>Performance Optimization</h3>
-                                        <p>I ensure that responsive websites are also optimized for performance, minimizing load times and keeping the user experience smooth across all devices.</p>
+                                        <img src="assets/images/mobile.png" alt="performance" style="width: 50px;height: 50px" >
+                                        <h3>Mobile Application Design</h3>
+                                        <p> My work focuses on creating intuitive, engaging, and accessible interfaces tailored to the needs of the target audience and aligned with platform guidelines (iOS Human Interface Guidelines and Android Material Design).</p>
                                     </div>
 
                                    
