--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@
                                          <img class="cms" src="assets/images/react.png" alt="react" style="width: 50px;height: 50px" >
                                         <img class="cms" src="assets/images/CMS.png" alt="CMS" style="width: 50px;height: 50px" >
                                         <img class="performance" src="assets/images/performance.png" alt="performance" style="width: 50px;height: 50px">
+                                         <img class="mobile" src="assets/images/mobile.png" alt="performance" style="width: 50px;height: 50px">
+                                        
                                     </div>
                                     <div class="d-flex align-items-center justify-content-between" >
                                         <div class="infos">
