--- a/service.html
+++ b/service.html
@@ -84,6 +84,12 @@
                                         <h3>UI/UX Design</h3>
                                         <p>It's about creating intuitive, engaging, and conversion-focused digital experiences that align with business goals.</p>
                                     </div>
+
+                                    <div class="service-item">
+                                        <img src="assets/images/ab-testing.png" alt="figma" style="width: 50px;height: 50px">
+                                        <h3>AB Testing</h3>
+                                        <p>A randomized process of presenting users with two different versions of a website—an A or a B version to observe which one performs better.</p>
+                                    </div>
                                     <div class="service-item">
                                         <img src="assets/images/figma.png" alt="figma" style="width: 50px;height: 50px">
                                         <h3>Design Tools</h3>
