--- a/service.html
+++ b/service.html
@@ -86,14 +86,22 @@
                                     </div>
 
                                     <div class="service-item">
+                                        <img src="assets/images/figma.png" alt="figma" style="width: 50px;height: 50px">
+                                        <h3>Design Tools</h3>
+                                        <p>Proficient in Figma, allowing me to craft pixel-perfect designs and create wireframes, prototypes, and user flows to ensure a cohesive experience.</p>
+                                    </div>
+
+                                    <div class="service-item">
                                         <img src="assets/images/ab-testing.png" alt="figma" style="width: 50px;height: 50px">
                                         <h3>AB Testing</h3>
                                         <p>A randomized process of presenting users with two different versions of a website—an A or a B version to observe which one performs better.</p>
                                     </div>
+                                    
+
                                     <div class="service-item">
-                                        <img src="assets/images/figma.png" alt="figma" style="width: 50px;height: 50px">
-                                        <h3>Design Tools</h3>
-                                        <p>Proficient in Figma, allowing me to craft pixel-perfect designs and create wireframes, prototypes, and user flows to ensure a cohesive experience.</p>
+                                        <img src="assets/images/ab-testing.png" alt="figma" style="width: 50px;height: 50px">
+                                        <h3>User Testing</h3>
+                                        <p>User testing helps you to evaluate the assumptions and design decisions that you make when creating a product, see if they correspond to users' expectations.</p>
                                     </div>
 
                                      <div class="service-item">
