--- a/service.html
+++ b/service.html
@@ -99,7 +99,7 @@
                                     
 
                                     <div class="service-item">
-                                        <img src="assets/images/ab-testing.png" alt="figma" style="width: 50px;height: 50px">
+                                        <img src="assets/images/testing.png" alt="figma" style="width: 50px;height: 50px">
                                         <h3>User Testing</h3>
                                         <p>User testing helps you to evaluate the assumptions and design decisions that you make when creating a product, see if they correspond to users' expectations.</p>
                                     </div>
